added sign up and login

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,6 @@
-Hello World
+<%- include("partials/header.ejs") %> 
+
+<a href="/login">Login</a>
+<a href="/signup">Sign Up</a>
+
+<%- include("partials/footer.ejs") %> 
