added get and post

--- a/views/workouts.ejs
+++ b/views/workouts.ejs
@@ -1,5 +1,7 @@
 <%- include("partials/header.ejs") %>
 
-WORKOUT LIST
+<h1>WORKOUT LIST</h1>
+
+<a href="/workouts/add">Add exercise</a>
 
 <%- include("partials/footer.ejs") %>
