edited add form

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -2,11 +2,11 @@
 
 <h1>Add exercise</h1>
 <form action="/workouts/add-exercise" method="POST">
-    <label for="exercise">Exercise</label>
-    <br><input type="text" name="exercise" id="exercise">
-
-    <br><label for="date">Date</label>
+    <label for="date">Date</label>
     <br><input type="date" name="date" id="date">
+
+    <br><label for="exercise">Exercise</label>
+    <br><input type="text" name="exercise" id="exercise">
 
     <br><label for="description">Description</label>
     <br><textarea name="description" id="description" cols="30" rows="10"></textarea>
