--- a/views/workouts.ejs
+++ b/views/workouts.ejs
@@ -2,6 +2,10 @@
 
 <h1>WORKOUT LIST</h1>
 
-<a href="/workouts/add">Add exercise</a>
+<p><a href="/workouts/add">Add exercise</a></p>
+
+<div>
+    
+</div>
 
 <%- include("partials/footer.ejs") %>
