group exercises by date

--- a/views/workouts.ejs
+++ b/views/workouts.ejs
@@ -5,9 +5,7 @@
 <p><a href="/workouts/add">Add exercise</a></p>
 
 <div>
-    <% for(exerciseItem of exercise) { %> 
-        <p><%= exerciseItem %></p>
-    <% } %>
+    <%= exercise['2022-09-08'] %>
 </div>
 
 <%- include("partials/footer.ejs") %>
