added edit page

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -2,6 +2,8 @@
 
 <h1>Add exercise <%= user.userName %></h1>
 <p><a href="/dashboard">Back to dashboard</a></p>
+<p><a href="/workouts">Back to workouts list</a></p>
+
 <form action="/workouts/add-exercise" method="POST">
     <label for="date">Date</label>
     <br><input type="date" name="date" id="date">
