--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,6 +1,10 @@
+<%- include("partials/header.ejs") %> 
+
 <h1>DASHBOARD</h1>
 <p>Welcome <%= user.userName %></p>
 
 <a href="/logout">Log Out</a>
 
 <a href="/workouts">Track workouts</a>
+
+<%- include("partials/footer.ejs") %> 
