--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <%- include("partials/header.ejs") %> 
 
+<h1 class="text-3xl font-bold underline">Do you even log?</h1>
+
 <a href="/login">Login</a>
 <a href="/signup">Sign Up</a>
 
