--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,5 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Do you even log?</title>
+    <link href="/css/tailwind.css" rel="stylesheet">
 </head>
 <body>
