--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
 <%- include("partials/header.ejs") %> 
 
-<h1 class="text-3xl font-bold underline">Do you even log?</h1>
+<div class="bg-dyelred w-1/2 p-2">
+    <img src="/img/logo.svg" alt="logo">
+</div>
 
 <a href="/login">Login</a>
 <a href="/signup">Sign Up</a>
