--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 
 <div class="mt-5 flex justify-center gap-2">
     <a href="/signup" class="rounded-md border border-transparent bg-dyelred2 px-7 py-3 font-medium text-white hover:bg-red-700">Sign Up</a>
-    <a href="/login" class="rounded-md border border-transparent bg-dyelred2 px-7 py-3 font-medium text-white hover:bg-red-700">Login</a>
+    <a href="/login" class="rounded-md border border-transparent bg-dyelred2 px-7 py-3 font-medium text-white hover:bg-red-700">Log In</a>
 </div>
 
 <%- include("partials/intro_bottom.ejs") %>
