--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -40,7 +40,7 @@
         </form>
     </div>
 
-    <p class="mt-2 text-sm text-dyelred3">Have an account? <a href="/login" class="text-sm text-dyelred2">Sign in</a></p>
+    <p class="mt-2 text-sm text-dyelred3">Have an account? <a href="/login" class="text-sm text-dyelred2">Log in</a></p>
 </div>
 
 <%- include("partials/intro_bottom.ejs") %>
