--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,5 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Do you even log?</title>
     <link href="/css/output.css" rel="stylesheet">
+    <!-- npx tailwindcss -i ./public/css/tailwind.css -o ./public/css/output.css --watch -->
 </head>
 <body>
