--- a/views/workouts.ejs
+++ b/views/workouts.ejs
@@ -1,25 +1,27 @@
 <%- include("partials/header.ejs") %>
+<%- include("partials/nav.ejs") %>
+<%- include("partials/container.ejs") %>
 
-<h1>WORKOUT LIST FOR <%= user.userName %></h1>
+<h1 class="text-3xl mb-5">Workouts</h1>
 
-<p><a href="/workouts/add">Add exercise</a></p>
-<p><a href="/dashboard">Back to dashboard</a></p>
+<p><a href="/workouts/add" class="inline-block bg-dyelred2 p-3 mb-2 rounded text-sm text-white hover:bg-red-700">Add workout</a></p>
 
-<div>
-    <!-- loop through dates in exercise list -->
-    <% for(let dateGroup in exercise) { %>
-        <div>
-            <h2><%= dateGroup %></h2> <!-- display date -->
-            <!-- loop through date in dates within exercise list -->
-            <% for(let date in exercise[dateGroup]) { %>
-                <!-- display properties in date -->
-                <p><%= exercise[dateGroup][date]['exercise'] %></p>
-                <p><%= exercise[dateGroup][date]['description'] %></p>
-                
-                <p><a href="/workouts/edit/<%= exercise[dateGroup][date]['_id'] %>">Edit</a></p>
-            <% } %> <!-- end of loop -->
-        </div>
-    <% } %> <!-- end of loop -->
-</div>
+<section class="grid lg:grid-cols-3 sm:grid-cols-1 gap-4">
+<!-- loop through dates in exercise list -->
+<% for(let dateGroup in exercise) { %>
+    <div class="rounded shadow-md border border-gray-200 p-2">
+        <h2 class="text-sm font-medium text-dyelred2"><%= dateGroup %></h2> <!-- display date -->
+        <!-- loop through date in dates within exercise list -->
+        <% for(let date in exercise[dateGroup]) { %>
+            <!-- display properties in date -->
+            <p class="text-lg font-medium"><%= exercise[dateGroup][date]['exercise'] %></p>
+            <p class="text-gray-500 text-base"><%= exercise[dateGroup][date]['description'] %></p>
+            
+            <p class="mt-1.5 mb-5"><a href="/workouts/edit/<%= exercise[dateGroup][date]['_id'] %>" class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold">Edit</a></p>
+        <% } %> <!-- end of loop -->
+    </div>
+<% } %> <!-- end of loop -->
+</section>
 
+<%- include("partials/container-bottom.ejs") %>
 <%- include("partials/footer.ejs") %>
