--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,7 +4,9 @@
 
 <%- include("partials/container.ejs") %>
 
-<h1 class="text-3xl mb-5">Dashboard</h1>
+<h1 class="text-3xl">Dashboard</h1>
+
+<p class="mb-5">Hi <%= user.userName %></p>
 
 <p><a href="/workouts" class="inline-block bg-dyelred2 p-3 rounded text-sm text-white hover:bg-red-700">Workouts</a></p>
 
