--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,4 @@
 <nav class="bg-dyelred p-2 w-full flex justify-between">
     <div><a href="/dashboard"><img src="/img/logo.svg" alt="Do you even log?" class="inline-block w-1/2"></a></div>
-    <div>
-        <span class="text-sm text-dyelred3"><%= user.userName %></span>
-        <a href="/logout" class="inline-block bg-dyelred2 text-sm text-white rounded p-1 hover:bg-red-700">Log out</a>
-    </div>
+    <div><a href="/logout" class="block bg-dyelred2 text-sm text-white rounded p-1 hover:bg-red-700">Log out</a></div>
 </nav>
