--- a/views/workouts.ejs
+++ b/views/workouts.ejs
@@ -9,7 +9,7 @@
 <section class="grid lg:grid-cols-3 sm:grid-cols-1 gap-4">
 <!-- loop through dates in exercise list -->
 <% for(let dateGroup in exercise) { %>
-    <div class="rounded shadow-md border border-gray-200 p-2">
+    <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
         <h2 class="text-sm font-medium text-dyelred2"><%= dateGroup %></h2> <!-- display date -->
         <!-- loop through date in dates within exercise list -->
         <% for(let date in exercise[dateGroup]) { %>
