--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<script src="../js/main.js" type="text/javascript"></script>
+<!--<script src="/js/main.js" type="text/javascript"></script>-->
 
 </body>
 </html>
