--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,11 +9,13 @@
 <section class="mt-4 grid md:grid-cols-2 sm:grid-cols-1 gap-4">
     <!-- number of workouts logged -->
     <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
-        <h2 class="text-lg">Workouts logged: <%= workoutCount %></h2>
+        <h2 class="text-sm font-medium text-dyelred2">Total workouts logged</h2>
+        <p class="text-lg font-medium"><%= workoutCount %></p>
     </div>
 
     <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
-        <h2 class="text-lg">Most recent workout: <%= workouts[0].date %></h2>
+        <h2 class="text-sm font-medium text-dyelred2">Most recent workout</h2>
+        <p class="text-lg font-medium"><%= workouts[0].date %></p>
     </div>
 </section>
 
