fixed line breaks

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -654,6 +654,10 @@ video {
   align-self: center;
 }
 
+.whitespace-pre-line {
+  white-space: pre-line;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -725,10 +729,6 @@ video {
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
 }
 
 .p-5 {
