added dashboard items

--- a/views/workouts.ejs
+++ b/views/workouts.ejs
@@ -15,7 +15,7 @@
         <% for(let date in exercise[dateGroup]) { %>
             <!-- display properties in date -->
             <p class="text-lg font-medium"><%= exercise[dateGroup][date]['exercise'] %></p>
-            <p class="text-gray-500 text-base whitespace-pre-line"><%= exercise[dateGroup][date]['description'] %></p>
+            <p class="text-sm text-gray-500 text-base whitespace-pre-line"><%= exercise[dateGroup][date]['description'] %></p>
             
             <p class="mt-1.5 mb-2"><a href="/workouts/edit/<%= exercise[dateGroup][date]['_id'] %>" class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold">Edit</a></p>
         <% } %> <!-- end of loop -->
