--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,16 +6,21 @@
 
 <p><a href="/workouts" class="inline-block bg-dyelred2 p-2 rounded text-sm text-white hover:bg-red-700">View Workouts</a></p>
 
-<section class="mt-4 grid md:grid-cols-2 sm:grid-cols-1 gap-4">
-    <!-- number of workouts logged -->
+<section class="mt-4 grid lg:grid-cols-3 sm:grid-cols-1 gap-4">
     <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
-        <h2 class="text-sm font-medium text-dyelred2">Total workouts logged</h2>
-        <p class="text-lg font-medium"><%= workoutCount %></p>
+        <h2 class="text-sm font-medium text-dyelred2">Most recent workout</h2>
+        <p class="text-lg font-medium"><%= exercises[0].date %></p>
     </div>
 
     <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
-        <h2 class="text-sm font-medium text-dyelred2">Most recent workout</h2>
-        <p class="text-lg font-medium"><%= workouts[0].date %></p>
+        <h2 class="text-sm font-medium text-dyelred2">Number of days worked out</h2>
+        <p class="text-lg font-medium"><%= Object.keys(exerciseDates).length %></p>
+    </div>
+
+    <!-- number of workouts logged -->
+    <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
+        <h2 class="text-sm font-medium text-dyelred2">Total exercises</h2>
+        <p class="text-lg font-medium"><%= exerciseCount %></p>
     </div>
 </section>
 
