--- a/views/workouts.ejs
+++ b/views/workouts.ejs
@@ -4,7 +4,7 @@
 
 <h1 class="text-3xl mb-4">Workouts</h1>
 
-<p><a href="/workouts/add" class="inline-block bg-dyelred2 p-2 mb-2 rounded text-sm text-white hover:bg-red-700">Add workout</a></p>
+<p><a href="/workouts/add" class="inline-block bg-dyelred2 p-2 mb-2 rounded text-sm text-white hover:bg-red-700">Add exercise</a></p>
 
 <section class="grid lg:grid-cols-3 sm:grid-cols-1 gap-4">
 <!-- loop through dates in exercise list -->
