--- a/views/add.ejs
+++ b/views/add.ejs
@@ -2,7 +2,7 @@
 <%- include("partials/nav.ejs") %>
 <%- include("partials/container.ejs") %>
 
-<h1 class="text-3xl mb-5">Add a workout</h1>
+<h1 class="text-3xl mb-5">Add an exercise</h1>
 
 <div class="md:w-max border border-gray-200 bg-white shadow-md rounded p-4">
     <form action="/workouts/add-exercise" method="POST">
