--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,7 +2,7 @@
 <%- include("partials/nav.ejs") %>
 <%- include("partials/container.ejs") %>
 
-<h1 class="text-3xl mb-5">Edit</h1>
+<h1 class="text-3xl mb-5">Edit exercise</h1>
 
 <% for(let exercise of exercises) { %>
     <% if(exercise._id == exerciseId) {%>
