--- a/views/add.ejs
+++ b/views/add.ejs
@@ -4,7 +4,7 @@
 
 <h1 class="text-3xl mb-5">Add an exercise</h1>
 
-<div class="md:w-max border border-gray-200 bg-white shadow-md rounded p-4">
+<section class="md:w-max border border-gray-200 bg-white shadow-md rounded p-4">
     <form action="/workouts/add-exercise" method="POST">
         <div class="mb-4">
             <label for="date" class="block text-gray-700 text-sm font-bold mb-2">Date</label>
@@ -26,7 +26,7 @@
             <a href="/workouts" class="inline-block bg-gray-400 p-2 mb-2 rounded text-sm text-white hover:bg-gray-700">Cancel</a>
         </div>
     </form>
-</div>
+</section>
 
 <%- include("partials/container-bottom.ejs") %>
 <%- include("partials/footer.ejs") %>
