--- a/public/css/output.css
+++ b/public/css/output.css
@@ -616,6 +616,12 @@ video {
   width: 100%;
 }
 
+.w-max {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+
 .w-fit {
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -904,10 +910,6 @@ video {
 
   .md\:max-w-screen-lg {
     max-width: 1024px;
-  }
-
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:text-sm {
